traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:2: error: not found: value getWorldwidth
  val x = getWorldwidth()
          ^TraversalByColumn:18: error: not found: value x
  if ( (x -1 == getX()) && (0 == getY())) {return true}
        ^